--- a/mukaan-de/index.html
+++ b/mukaan-de/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/mukaan.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apps - Muhammed Kaan | Technick, Tipps und Tricks</title>
+    <title>Muhammed Kaan | Technick, Tipps und Tricks</title>
     <link href="/dist/styles.css" rel="stylesheet">
   </head>
   <body>
