--- a/mukaan-de/index.html
+++ b/mukaan-de/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/images/mukaan.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Muhammed Kaan | Technick, Tipps und Tricks</title>
-    <link href="/dist/styles.css" rel="stylesheet">
+    <link href="/src/index.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
