--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="Mukaan/images/mukaan.png" />
+    <link rel="icon" type="image/svg+xml" href="/images/mukaan.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Muhammed Kaan | Technick, Tipps und Tricks</title>
     <link href="/src/index.css" rel="stylesheet">
